Added level input field to start screen.

--- a/src/assets/StartScreen.html
+++ b/src/assets/StartScreen.html
@@ -6878,7 +6878,11 @@ height: -webkit-fill-available;
                           <div class="form-group">
                               <div class="input-group">
                                   <span class="input-group-addon" id="basic-addon1">Seed</span>
-                                  <input id="seedInput" type="text" class="form-control" placeholder="Enter your seed" aria-describedby="basic-addon1" value="Repair">
+                                  <input id="seedInput" type="text" class="form-control" placeholder="Enter seed" aria-describedby="basic-addon1" value="Repair">
+                              </div>
+                              <div class="input-group">
+                                  <span class="input-group-addon" id="basic-addon2">Level</span>
+                                  <input id="levelInput" type="text" class="form-control" placeholder="Enter level" aria-describedby="basic-addon2" value="1">
                               </div>
                           </div>
                           <div class="form-group">
