Added sound on game start. Resized form in start screen.

--- a/src/assets/StartScreen.html
+++ b/src/assets/StartScreen.html
@@ -6857,6 +6857,18 @@ height: -webkit-fill-available;
 #videoMessage h3{font-size: 1.2em;color:#ffffff;text-align:center;}
 .videoClick {text-align:center}
 .videoClick a{color:white;background-color:rgba(241, 241, 241, 0.25);font-size: 1.7em;cursor:pointer;cursor:hand}
+
+.btn-lg {
+  font-size: 32px;
+}
+
+.input-group-addon, .form-control {
+  font-size: 20px;
+}
+
+#videoMessage * {
+  height: auto;
+}
 </style>
 
 
@@ -6886,7 +6898,7 @@ height: -webkit-fill-available;
                               </div>
                           </div>
                           <div class="form-group">
-                              <button id="startBtn"type="button" class="btn btn-lg btn-primary btn-block btnForget">Start Repairevil</button>
+                              <button id="startBtn"type="button" class="btn btn-lg btn-primary btn-block">Start</button>
                           </div>
 
                       </form>
