--- a/src/assets/StartScreen.html
+++ b/src/assets/StartScreen.html
@@ -6835,9 +6835,9 @@ button.close {
 /*# sourceMappingURL=bootstrap.css.map */
 
 .mycontainer {
-    width: 25%;
-    left: 37%;
-    top: 100px;
+    width: 50%;
+    left: 25%;
+    top: 25%;
     position: relative;
 }
 .video {
@@ -6868,6 +6868,11 @@ height: -webkit-fill-available;
 #videoMessage * {
   height: auto;
 }
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 </style>
 
 
@@ -6884,7 +6889,7 @@ height: -webkit-fill-available;
           <div class="panel panel-default">
               <div class="panel-body">
                   <div class="text-center">
-                      <p>Insert a logo here</p>
+                      <img src="src/assets/logobackground.png">
                       <div>
                           <div class="form-group">
                               <div class="input-group">
